--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "formik": "^2.4.6",
     "mdi-material-ui": "^7.7.0",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
     "react-apexcharts": "^1.4.0",
+    "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-redux": "^8.0.5",
@@ -25,7 +27,8 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^6.1.10",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
