--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-apexcharts": "^1.4.0",
     "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
